# kaggle-agent

./: .gitignore  AGENTS.md  CHECKLIST.md  COMPETITION.md  FINDINGS.md  ISSUES.md  JOURNAL.md  PLAYBOOK.md  README.md  SUBMISSIONS.md  pyproject.toml  train_sed.py  workspace.example.toml
.agents/docs/: monitoring-loop.md
.agents/projects/: birdclef-2026-system.md
BirdCLEF-2026-Codebase/: README.md  analyze_results.py  extract_embeddings.py  inference.py  train.py
BirdCLEF-2026-Codebase/birdclef-2026/: README.md
BirdCLEF-2026-Codebase/configs/: debug.yaml  default.yaml  perch_teacher_cache.yaml  (+12 more)
docs/: baseline_analysis_run0004.md  perch_pipeline_explained.md  task_completion_summary.md
kaggle_agent/: __init__.py  __main__.py  branch_typing.py  capabilities.py  cli.py  config.py  knowledge.py  knowledge_reducer.py  layout.py  schema.py  service.py  utils.py
knowledge/: experiment_conclusions.md
prompts/: codegen.md  critic.md  decision.md  evidence.md  plan.md  report.md  research.md  submission.md
reports/: discovery_report.html  experiment_report.html  master_report.html  metrics.csv  overview.md  research_report.html  runs.csv  submission_report.html  submissions.csv  work_items.csv
schemas/: codegen.schema.json  critic.schema.json  decision.schema.json  evidence.schema.json  plan.schema.json  report.schema.json  research.schema.json
scripts/: run_autoresearch.sh
state/: ledger.db  session_memory.json  session_memory.md
tests/: test_adapter_command.py  test_external_birdclef_integration.py  test_live_adapters.py  test_workspace.py
(+328 files in other folders)
